<resources>
    <string name="app_name">Haushaltsbuch</string>

    <!-- Types of Accounts -->
    <string name="gesamtvermoegen">Gesamtvermögen</string>
    <string name="zahlungskonten">Zahlungskonten</string>
    <string name="sparkonten">Sparkonten</string>

    <!-- Accounts -->
    <string name="bargeld">Bargeld</string>
    <string name="girokonto">Girokonto</string>
    <string name="sparguthaben">Sparguthaben</string>
    <string name="depot">Depot</string>

    <!-- Account Array -->
    <string-array name="accountType">
        <item>Bargeld</item>
        <item>Girokonto</item>
        <item>Sparguthaben</item>
        <item>Depot</item>
    </string-array>

    <!-- Categories -->
    <string-array name="categories">
        <item>Wohnung</item>
        <item>Lebensmittel</item>
        <item>Sozialleben</item>
        <item>Auto</item>
        <item>Reise</item>
        <item>Geschenk</item>
        <item>Sonstiges</item>
    </string-array>

    <!-- Placeholder -->
    <string name="placeholder">0.00 €</string>

    <!-- Action -->
    <string name="einnahme">Einnahme</string>
    <string name="ausgabe">Ausgabe</string>
    <string name="uebertrag">Übertrag</string>

    <!-- Messages -->
    <string name="ungueltigerBetrag">Ungültiger Betrag</string>

</resources>
