<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.brott.haushaltsbuch.utilities.HelperMethods" />

        <variable
            name="accountViewData"
            type="com.brott.haushaltsbuch.account.AccountViewData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/gesamtvermoegen"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/assets_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@{HelperMethods.formatAmount(accountViewData.totalAssets), default=@string/placeholder}"
            android:textAlignment="center"
            android:textSize="28sp" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/zahlungskonten_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            card_view:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/zahlungskonten"
                            android:textAllCaps="true"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/payments_sum_text_view"
                            android:layout_gravity="right"
                            android:paddingBottom="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:text="@{HelperMethods.formatAmount(accountViewData.totalLiquidAssets), default=@string/placeholder}"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:id="@+id/money_text_view"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/bargeld"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/money_amount_text_view"
                            android:layout_gravity="right"
                            android:paddingBottom="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:text="@{HelperMethods.formatAmount(accountViewData.moneyAmount), default=@string/placeholder}"
                            android:textSize="14sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/check_account_text_view"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/girokonto"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/check_account_amount_text_view"
                            android:layout_gravity="right"
                            android:paddingBottom="10dp"
                            android:paddingRight="10dp"
                            android:text="@{HelperMethods.formatAmount(accountViewData.checkAccountAmount), default=@string/placeholder}"
                            android:textSize="14sp" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sparkonten_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/sparkonten"
                            android:textAllCaps="true"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/savings_sum_text_view"
                            android:layout_gravity="right"
                            android:paddingBottom="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:text="@{HelperMethods.formatAmount(accountViewData.totalSavings), default=@string/placeholder}"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:id="@+id/savings_account_text_view"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/sparguthaben"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/savings_account_amount_text_view"
                            android:layout_gravity="right"
                            android:paddingBottom="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:text="@{HelperMethods.formatAmount(accountViewData.savingsAmount), default=@string/placeholder}"
                            android:textSize="14sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/portfolio_text_view"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/depot"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/portfolio_amount_text_view"
                            android:layout_gravity="right"
                            android:paddingBottom="10dp"
                            android:paddingRight="10dp"
                            android:text="@{HelperMethods.formatAmount(accountViewData.portfolioAmount), default=@string/placeholder}"
                            android:textSize="14sp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>